--- a/src/containers/Home/home.scss
+++ b/src/containers/Home/home.scss
@@ -1,59 +1,44 @@
-@import url('https://fonts.googleapis.com/css?family=Arvo');
+ul {
+  padding: 0;
+}
 
-body,
-html {
+.photo-grid {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.photo-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: #f5f4f4;
-  font-size: 13px;
-  font-family: 'Arvo', monospace;
-  
-  @supports(display: grid) {
-    display: block;
-  }
+  flex-wrap: wrap;
+  list-style-type: none;
 }
 
-.section {
-  display: none;
-  padding: 2rem;
-  
-  @media screen and (min-width: 768px) {
-    padding: 4rem;
-  }
-  
-  @supports(display: grid) {
-    display: block;
-  }
-}
-
-.grid {
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 150px;
-  grid-auto-flow: row dense;
-}
-
-.item {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+.photo-element {
   box-sizing: border-box;
-  background: #0c9a9a;
-  color: #fff;
-  grid-column-start: auto;
-  grid-row-start: auto;
-  color: #fff;
-  // background:  url('https://images.unsplash.com/photo-1470124182917-cc6e71b22ecc?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb&crop=');
-  background-size: cover;
-  background-position: center;
+  padding: 10px;
+  height: 30vh;
+  flex-grow: 1;
+  position: relative;
+}
+
+.photo-image {
   box-shadow: -2px 2px 10px 0px rgba(#444, 0.4);
-  transition: transform 0.3s ease-in-out;
-  cursor: pointer;
-  counter-increment: item-counter;
+  border-radius: 10px;
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: middle;
+  transition: 0.2s ease-in-out;
+  opacity: 0.7;
+
+  &:hover {
+    transition: 0.2s ease-in;
+    opacity: 1;
+    cursor: pointer;
+  }
+}
+
+.photo-caption {
+  position: absolute;
 }
